feat: implement core infrastructure management modules for AIS, VTS, Dike/Revetment, and Navigation Channel systems